--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     </div>
     
     
-    <script type="text/javascript" src="js/main.js"></script>
+    <!-- <script type="text/javascript" src="js/main.js"></script> -->
+    <script type="text/javascript" src="js/scripts.js"></script>
 </body>
 </html>
